# YuriOS

./: .env.example  .gitignore  PROVENANCE.md  README.md  SPEC.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: whitepaper.md
scripts/: demo_avatar.py  fetch_live2d.py  reindex.py  seed_vault.py
soul-src/: BOOTSTRAP.md  CONSTITUTION.md  EXAMPLES.md  MEMORY.md  NOTES.md  PERSONA.md  SCENARIO.md  USER.md  WORLD.md  soul.yaml
tests/: conftest.py  test_avatar_controller.py  test_boot.py  test_channels.py  test_config.py  test_dream.py  test_events.py  test_guard.py  test_integration.py  test_knowledge.py  test_mcp_contract.py  test_mind_loop.py  test_mind_routes.py  test_mind_scenarios.py  test_palette_map.py  test_policy.py  test_selfedit.py  test_selfie.py  test_situation.py  test_timers.py  test_tool_loop.py  test_tool_tags.py  test_turn_tools.py  test_voice_ws_fork.py  test_weather.py  test_window.py  test_world_model.py
web/: index.html  package-lock.json  package.json  sanctuary.css  vite.config.js
web/js/: boot.js  bridge.js  chat.js  main.js  mind.js  music.js  viseme.js  voice.js
web/js/stage/: Blink.js  EmoteController.js  GazeController.js  Rain.js  SanctuaryScene.js  VrmLoader.js  VrmStage.js
web/live2d/: README.md  avatar.js  events.js  index.html  sanctuary.css  settings.js  voice.js
web/shared/: settings.css  settings.js
yurios/: __init__.py
yurios/app/: __main__.py  config.py  corpus.py  main.py  sessions.py  vaultgit.py
yurios/app/core/: assemble.py  soul.py
yurios/app/memory/: index.py  partner.py  reindex.py  store.py  summarise.py
yurios/app/providers/: base.py  lmstudio.py  ollama.py  openrouter.py  sentence_tf.py
yurios/app/routes/: chat.py  greeting.py  health.py  rate.py  session.py
yurios/chat/: __init__.py  __main__.py
yurios/desktop/: __init__.py  __main__.py  avatar_models.py  brain.py  config.py  main.py  window.py
yurios/desktop/routes/: avatar.py  health.py  settings.py  voice_ws.py
yurios/desktop/voice/: __init__.py  emotion.py  fillers.py  latency.py  protocols.py  sentences.py  speech_gate.py  transcript.py  turn.py
yurios/desktop/voice/backends/: __init__.py  fakes.py  stt_whisper.py  tts_kokoro.py  tts_qwen.py  tts_sovits.py  vad_silero.py
yurios/forge/: README.md  __init__.py  character.py  provenance.py  service.py  templates.py  types.py
yurios/forge/backends/: __init__.py  base.py  mock.py  openrouter.py
yurios/forge/characters/: yuri.yaml
yurios/forge/templates/: selfie.yaml
yurios/mind/: __init__.py  budget.py  dream.py  goals.py  journal.py  knowledge.py  loop.py  policy.py  selfedit.py  signals.py  trace.py  util.py  vaultio.py  world.py
yurios/world/: __main__.py  boot.py  brain.py  clock.py  config.py  hub.py  main.py  selfies.py  situation.py  tooltags.py  turns.py  window.py
yurios/world/avatar/: __init__.py  controller.py
yurios/world/channels/: __init__.py  base.py  manager.py  telegram.py
yurios/world/routes/: chat.py  events.py  health.py  live2d.py  mind.py  voice_ws.py
yurios/world/tools/: client.py  fakes.py  guard.py  server.py  timers.py  weather.py
